update:fix height on ios device

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     background-color: var(--background-color);
     overflow: hidden;
 }
